2000-01-16  Vadim Strizhevsky  <vadim@optonline.net>

	* gnome-pilot.m4: Fix typo in PILOT_LINK_HOOK.

2000-01-15  Eskil Heyn Olsen  <deity@eskil.dk>
	
	* gnome-pilot.m4: PILOT_LINK_HOOK now check pilot-link version.
	GNOME_PILOT_CHECK defaults to requiring 0.9.3.
	
2000-01-09  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: Applied patch from R. Bernstein
	<rocky@panix.com> - print a better error message when
	LibGTop's major version number mismatches.

1999-12-25  Martin Baulig  <martin@home-of-linux.org>

	* gnome-pilot.m4: Applied patch from Colin Walters to make
	it compile under Debian GNU/Linux.

1999-12-05  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-checks.m4: Removed all guile variables.

1999-11-18  Jeff Garzik  <jgarzik@mandrakesoft.com>

	* gnome-xml-check.m4: Better scoping of below fix.

1999-11-16  Jeff Garzik  <jgarzik@mandrakesoft.com>

	* gnome-xml-check.m4: always AC_SUBST GNOME_XML_LIB, so that
	output variable will always be present.

1999-11-09  Eskil Heyn Olsen  <deity@eskil.dk>

	* gnome-pilot.m4: uses test -r instead of test -e, was reported as 
	a portability bug wrt solaris.

1999-10-31  Eskil Heyn Olsen  <deity@eskil.dk>

	* gnome-pilot.m4: added PILOT_LINK_CHECK, used by
	GNOME_PILOT_CHECK. Adds --with-pisock=$dir_for_pilot_link.

1999-10-24  Jacob Berkman  <jberkman@andrew.cmu.edu>

	* gnome-ghttp-check.m4: this should be a better fix

1999-10-21  Jacob Berkman  <jberkman@andrew.cmu.edu>

	* gnome-ghttp-check.m4: use a temp value until we know that
	ghttp exists.  This will hopefully fix building on Solaris 
	machines

1999-09-26  Jody Goldberg <jgoldberg@home.com>

	* compiler-flags.m4 : Remove -Wpointer-arith.  It generates large
	  numbers of warnings under glibc2.1.2 with a recent egcs release.
	  The glibc maintainers have suggested removing this flag because it
	  is useless.

1999-09-01  Havoc Pennington  <hp@pobox.com>

	* gnome-xml-check.m4: If you're going to AC_PATH_PROG then use the